--- a/w01.md
+++ b/w01.md
@@ -5,8 +5,8 @@ permalink: /W01/
 
 # Top 10 List of Week 01
 
-1. [One] (https://twitter.com)<br>
+1. [One](https://guides.github.com/features/pages/#:~:text=Create%20Your%20Website,-Once%20you've&text=On%20the%20new%20repository%20screen,name%20to%20generate%20your%20website.&text=If%20you%20scroll%20down%20on,process%20of%20creating%20your%20site.)<br>
 First attempt at making a .md file
 
-2. [Two] (https://facebook.com)<br>
+2. [Two](https://facebook.com)<br>
 Second attempt at making a .md file
