first interesting link

--- a/w01.md
+++ b/w01.md
@@ -5,8 +5,17 @@ permalink: /W01/
 
 # Top 10 List of Week 01
 
-1. [One](https://guides.github.com/features/pages/#:~:text=Create%20Your%20Website,-Once%20you've&text=On%20the%20new%20repository%20screen,name%20to%20generate%20your%20website.&text=If%20you%20scroll%20down%20on,process%20of%20creating%20your%20site.)<br>
-First attempt at making a .md file
+1. [Making a Github Pages](https://guides.github.com/features/pages/#:~:text=Create%20Your%20Website,-Once%20you've&text=On%20the%20new%20repository%20screen,name%20to%20generate%20your%20website.&text=If%20you%20scroll%20down%20on,process%20of%20creating%20your%20site.)<br>
+Ini adalah link pertama yang saya buka ketika mengikuti mata kuliah OS ini. Link ini menarik karena hampir semua teman saya pernah mengunjungi link ini ketika mengerjakan week00.
 
 2. [Two](https://facebook.com)<br>
 Second attempt at making a .md file
+
+3. [Three](https://google.com)<br>
+lorem ipsum
+
+4. [Four](https://google.com)<br>
+lorem ipsum
+
+5. [Five](https://google.com)<br>
+lorem ipsum
