--- a/w01.md
+++ b/w01.md
@@ -5,17 +5,32 @@ permalink: /W01/
 
 # Top 10 List of Week 01
 
-1. [Making a Github Pages](https://guides.github.com/features/pages/#:~:text=Create%20Your%20Website,-Once%20you've&text=On%20the%20new%20repository%20screen,name%20to%20generate%20your%20website.&text=If%20you%20scroll%20down%20on,process%20of%20creating%20your%20site.)<br>
+1. [Simple Github Pages Guide](https://guides.github.com/features/pages/#:~:text=Create%20Your%20Website,-Once%20you've&text=On%20the%20new%20repository%20screen,name%20to%20generate%20your%20website.&text=If%20you%20scroll%20down%20on,process%20of%20creating%20your%20site.)<br>
 Ini adalah link pertama yang saya buka ketika mengikuti mata kuliah OS ini. Link ini menarik karena hampir semua teman saya pernah mengunjungi link ini ketika mengerjakan week00.
 
-2. [Two](https://facebook.com)<br>
-Second attempt at making a .md file
+2. [Why Vim?](https://www.linux.com/training-tutorials/vim-101-beginners-guide-vim/#:~:text=Vim%20is%20the%20editor%20of,missing%20from%20the%20original%20vi.)<br>
+Vim? Apa itu? kenapa harus memakai Vim? Link ini menjelaskan secara singkat keuntungan dalam menggunakan Vim.
 
-3. [Three](https://google.com)<br>
-lorem ipsum
+3. [Remember 100 Linux Commands in No Time!](https://www.guru99.com/linux-commands-cheat-sheet.html)<br>
+Mengapa harus mengafalkan jika kita bisa GSGS? Link ini berisi daftar command linux yang umum digunakan berisi penjelasan singkat untuk membantu kita-kita yang punya masalah ingatan jangka pendek dan panjang.
 
-4. [Four](https://google.com)<br>
-lorem ipsum
+4. [Debian?](https://www.techopedia.com/definition/18746/debian-gnulinux)<br>
+Bagi orang yang merasakan pengalaman yang sama dengan saya terkait dengan debian seperti kebingungan atau bertemu jalan buntu, link ini memberikan penjelasan secara singkat tentang apa itu debian dan hubungannya dengan linux.
 
-5. [Five](https://google.com)<br>
-lorem ipsum
+5. [Virtual Machine != Virtual World](https://www.howtogeek.com/196060/beginner-geek-how-to-create-and-use-virtual-machines/)<br>
+jika virtual Machine terdengar tidak asing namun jika ditanya apa itu virtual machine masih sulit untuk menjawab, maka link ini akan membantu jika suatu saat kita ditanya "apa itu virtual machine?".
+
+6. [Bash aliases explained in 5 minutes](https://opensource.com/article/19/7/bash-aliases#:~:text=A%20Bash%20alias%20is%20a,be%20loaded%20by%20%24HOME%2F.)<br>
+Mata kuliah ini penuh misteri bagi saya dimana setiap kalimat yang saya baca memiliki kata yang belum pernah saya kenal. Salah satunya adalah bash aliases, bagi saya yang masih sangat 'cetek' bash aliases adalah hal yang membingungkan, tapi dengan link ini saya mendapatkan pemahaman dasar.
+
+7. [Git Expert Hate This Link!](https://www.atlassian.com/git/tutorials/atlassian-git-cheatsheet)<br>
+Beberapa bulan libur dapat membuat saya lupa dengan teman-teman lama saya yaitu git command. Untungnya ada cheatsheet yang bisa membantu mengingat kembali teman-teman lama saya ini, karena yang saya tahu beberapa mata kuliah saat ini berhubungan dengan git. Jadi tidak ada salahnya punya backup plan.
+
+8. [Top 10 Markdown Syntax You Didn't Know!](https://google.com)<br>
+Untuk saat ini saya merasa senang jika menemukan judul clickbait seperti di atas, karena sering terjadi ketika memelajari syntax saya bisa sering lupa. Dari link di atas saya juga menemukan beberapa syntax yang sebelumnya saya tidak tahu.
+
+9. [Operating System 101](https://edu.gcfglobal.org/en/computerbasics/understanding-operating-systems/1/)<br>
+Karena saat ini saya mengikuti mata kuliah OS saya perlu memantapkan pengertian saya tentang operating system. Jangan sampai saat lulus mata kuliah ini dengan nilai A(aminnn) saya tidak tahu apa itu operating system.
+
+10. [Operating System, Necessity or Luxury?](https://blog.regehr.org/archives/164#:~:text=Resource%20Management,queuing%20handled%20by%20the%20OS).)<br>
+Pernah terlintas di pikiran saya ketika mengerjakan assignment week01, apakah penting belajar operating system? Link di atas membantu saya mencapai kesimpulan bahwa penting dan merupakan suatu keperluan untuk belajar operating system.
