--- a/w02.md
+++ b/w02.md
@@ -5,33 +5,33 @@ permalink: /W02/
 
 # Top 10 List of Week 02
 
-1. [Test]()<br>
+1. [Why Security is Important](https://businesspartnermagazine.com/5-reasons-why-security-systems-important-for-businesses/#:~:text=Security%20is%20important%20for%20every,to%20risk%20losing%20their%20assets.&text=Security%20systems%20help%20deter%20burglars,your%20assets%20at%20all%20times.)<br>
 Lorem
 
-2. [Test]()<br>
+2. [What Threatens Operating System](https://www.tutorialspoint.com/Protection-and-Security-in-Operating-System#:~:text=Protection%20and%20security%20requires%20that,the%20data%20in%20the%20system.)<br>
 Lorem
 
-3. [Test]()<br>
+3. [Top 5 Harmful Threats](https://www.logsign.com/blog/top-5-harmful-cyber-threat-types/)<br>
 Lorem
 
-4. [Test]()<br>
+4. [What We Can Do Regarding Security](https://www.itgovernance.co.uk/blog/5-ways-to-improve-your-information-security)<br>
 Lorem
 
-5. [Test]()<br>
+5. [How Protected Our Data is](https://theonebrief.com/how-safe-is-your-data/)<br>
 Lorem
 
-6. [Test]()<br>
+6. [Tips for C Users](https://www.techbeamers.com/top-c-programming-tips-and-tricks-for-you/)<br>
 Lorem
 
-7. [Test]()<br>
+7. [C C++ C#, How to Distinguish](https://csharp-station.com/understanding-the-differences-between-c-c-and-c/)<br>
 Lorem
 
-8. [Test]()<br>
+8. [is C Still Relevant Today?](https://softwareengineering.stackexchange.com/questions/103897/is-the-c-programming-language-still-used#:~:text=According%20to%20Tiobe%20index%2C%20C,wiki%20or%20this%20for%20example.)<br>
 Lorem
 
-9. [Test]()<br>
+9. [Short Introduction to Digital Signature](https://searchsecurity.techtarget.com/definition/digital-signature#:~:text=A%20digital%20signature%20is%20a,offers%20far%20more%20inherent%20security.)<br>
 Lorem
 
-10. [Test]()<br>
+10. [Useful BASH scripts](https://www.osradar.com/useful-bash-scripts-for-every-linux-user/)<br>
 Lorem
 
