--- a/w02.md
+++ b/w02.md
@@ -6,32 +6,32 @@ permalink: /W02/
 # Top 10 List of Week 02
 
 1. [Why Security is Important](https://businesspartnermagazine.com/5-reasons-why-security-systems-important-for-businesses/#:~:text=Security%20is%20important%20for%20every,to%20risk%20losing%20their%20assets.&text=Security%20systems%20help%20deter%20burglars,your%20assets%20at%20all%20times.)<br>
-Lorem
+Ketika membuka materi week02, langsung muncul di pikiran saya seberapa penting security. Dalam aspek apa saja security berperan selain melindungi data dll.
 
 2. [What Threatens Operating System](https://www.tutorialspoint.com/Protection-and-Security-in-Operating-System#:~:text=Protection%20and%20security%20requires%20that,the%20data%20in%20the%20system.)<br>
-Lorem
+"know your enemy" perkataan ini perlu diterapkan ketika berkaitan dengan security. Dengan mengetahui ancaman yang dapat muncul tentu kita dapat mencari pencegahan.
 
 3. [Top 5 Harmful Threats](https://www.logsign.com/blog/top-5-harmful-cyber-threat-types/)<br>
-Lorem
+Penting untuk mengetahui bentuk ancaman apa yang umum sehingga setidaknya kita sudah siap untuk berhadapan dengan mayoritas masalah yang ada terkait security.
 
 4. [What We Can Do Regarding Security](https://www.itgovernance.co.uk/blog/5-ways-to-improve-your-information-security)<br>
-Lorem
+Masalah dalam security tidak akan pernah selesai, sistem yang paling aman pun pasti mempunyai celah. Lalu apa yang bisa dilakukan untuk setidaknya melindungi sistem dari ancaman yang ada?
 
 5. [How Protected Our Data is](https://theonebrief.com/how-safe-is-your-data/)<br>
-Lorem
+Tidak banyak yang tahu seberapa rentan data yang kita miliki, seringkali kita mengisi data-data penting seperti alamat, no hp, tanggal lahir dan mungkin data sensitif ketika menggunakan media sosial. Apakah data yang kita masukan sudah pasti aman?
 
 6. [Tips for C Users](https://www.techbeamers.com/top-c-programming-tips-and-tricks-for-you/)<br>
-Lorem
+Tips and Trick untuk orang seperti saya yang buta dengan bahasa C. Mengamati dan memodifikasi merupakan cara yang cepat untuk saya dalam mempelajari sesuatu dibandingkan harus belajar dari awal.
 
 7. [C C++ C#, How to Distinguish](https://csharp-station.com/understanding-the-differences-between-c-c-and-c/)<br>
-Lorem
+"serupa namun tak sama" eh bukan "tidak serupa dan tidak sama" seringkali mendengar mengenai keluarga C ini tapi tidak pernah tau perbedaannya. Setelah mencari tahu, ternyata cukup mengejutkan perbedaannya.
 
 8. [is C Still Relevant Today?](https://softwareengineering.stackexchange.com/questions/103897/is-the-c-programming-language-still-used#:~:text=According%20to%20Tiobe%20index%2C%20C,wiki%20or%20this%20for%20example.)<br>
-Lorem
+Saat menonton Youtube iklan mengenai python seringkali mampir menganggu waktu santai saya padahal saya sudah lama lulus DDP1. Apa mungkin bahasa pemrograman sekarang yang relevan adalah python? bahasa seperti C sudah tidak digunakan? link ini menjawab pertanyaan saya.
 
 9. [Short Introduction to Digital Signature](https://searchsecurity.techtarget.com/definition/digital-signature#:~:text=A%20digital%20signature%20is%20a,offers%20far%20more%20inherent%20security.)<br>
-Lorem
+Cukup bingung ketika pertama kali membaca kata "Digital Signature" setelah membaca-baca saya cukup terpukau dengan cara kerja Digital Signature.
 
 10. [Useful BASH scripts](https://www.osradar.com/useful-bash-scripts-for-every-linux-user/)<br>
-
+Ketika mengerjakan assignment week02 bagian bash script, beruntungnya bertemu dengan link ini.
 
