os211 calmeryan small tweaks to w02.md

--- a/w02.md
+++ b/w02.md
@@ -33,5 +33,5 @@ Saat menonton Youtube iklan mengenai python seringkali mampir menganggu waktu sa
 Cukup bingung ketika pertama kali membaca kata "Digital Signature" setelah membaca-baca saya cukup terpukau dengan cara kerja Digital Signature.
 
 10. [Useful BASH scripts](https://www.osradar.com/useful-bash-scripts-for-every-linux-user/)<br>
-Ketika mengerjakan assignment week02 bagian bash script, beruntungnya bertemu dengan link ini.
+Ketika mengerjakan assignment week02 bagian bash script, beruntungnya bertemu dengan link ini. Setidaknya jadi lebih tahu tentang bash scripts.
 
