--- a/w04.md
+++ b/w04.md
@@ -8,7 +8,7 @@ permalink: /W04/
 1. [Logical and Physical Address](https://www.geeksforgeeks.org/logical-and-physical-address-in-operating-system/)<br>
 Terdapat perbedaan antara address logical dan physical baik dari segi space maupun visibility nya. Ketika belajar PSD sempat mendengar tentang address namun ternyata masih lebih banyak lagi yang harus dipahami tentang address.
 
-2. [What is MMU?](https://whatis.techtarget.com/definition/memory-management-unit-MMU#:~:text=A%20memory%20management%20unit%20(MMU,all%20aspects%20of%20memory%20management.)<br>
+2. [What is MMU?](https://www.techopedia.com/definition/4768/memory-management-unit-mmu)<br>
 Setelah saya membaca link di atas saya menyimpulkan MMU itu layaknya seperti seorang manager namun bedanya MMU mengurusi atau bertanggung jawab terhadap memory management. Hal ini menarik karena ternyata penggunaan RAM dan cache memory diperhatikan oleh MMU.
 
 3. [Memory Allocation](https://binaryterms.com/static-and-dynamic-memory-allocation.html#:~:text=Memory%20allocation%20is%20an%20action,a%20process%2C%20before%20its%20execution.)<br>
@@ -34,3 +34,4 @@ Tadi kita sempat membahas tentang logical dan physical address, Page Table adala
 
 10. [Virtual File System](https://searchservervirtualization.techtarget.com/definition/virtual-file-system-VFS)<br>
 Pemrograman yang membentuk antarmuka antara kernel dan sistem file yang lebih konkret disebut Virtual File-System. Virtual File-System berfungsi sebagai lapisan abstraksi yang memberikan akses aplikasi ke berbagai jenis sistem file dan perangkat penyimpanan lokal dan jaringan.
+
